--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -15,7 +15,7 @@
         <div >
             <ul class="list-container">
                 <a href="/products/1"><li class="item">Productos</li></a>
-                <li class="item">Contacto</li>
+                <a href="/chat"><li class="item">Contacto</li></a>
                 <li class="item">Sobre nosotros</li>
                 
 
